Correct grid breaks on large screens

--- a/css/exam-rules.css
+++ b/css/exam-rules.css
@@ -125,3 +125,6 @@ body{
 /* Commit 12 by Dilnazochka (2025-10-05 23:42:57): Correct grid breaks on large screens */
 @media (min-width:1px){/* noop rule */}
 
+/* Commit 12 by Dilnazochka (2025-10-05 23:51:43): Correct grid breaks on large screens */
+@media (min-width:1px){/* noop rule */}
+
